# LegalSathiAI

./: .gitignore  README.md  Untitled Diagram (1).drawio  pyproject.toml
notebooks/: BNS.ipynb  BNSS.ipynb
src/: main.py
src/chunking/: chunker.py  temp.py
src/config/: config.yaml
src/data_ingestion/: ingestion_and_clean.py
src/embedding/: embedder.py
src/exception/: __init__.py
src/generation/: genrator.py  llm.py  prompts.py
src/logger/: __init__.py
src/retrieval/: parent_store.py  reranker.py  retriever.py
src/utils/: main_utils.py
src/utils/scripts/: parent_store_script.py
